--- a/nexter/src/sass/layout/_layout.scss
+++ b/nexter/src/sass/layout/_layout.scss
@@ -22,8 +22,77 @@
 }
 
 .homes {
-  background-color: $color-grey-dark-2;
   grid-column: center-start / center-end;
+  margin: 16rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-gap: 6.4rem;
+}
+
+.home-card {
+  background-color: $color-grey-light-1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.2rem;
+
+  &__img {
+    width: 100%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+  }
+
+  &__icon {
+    width: 2.4rem;
+    height: 2.4rem;
+    color: $color-primary-dark;
+
+    &--like {
+      grid-row: 1 / 2;
+      grid-column: 2 / 3;
+      fill: $color-primary-dark;
+      justify-self: end;
+      margin: 1rem;
+    }
+  }
+
+  &__title {
+    background-color: $color-secondary;
+    color: hsl(0, 0%, 100%);
+    font-family: $font-display;
+    text-align: center;
+    font-weight: 500;
+    padding: 1.2rem;
+    font-size: 1.6rem;
+    width: 80%;
+    align-self: end;
+    justify-self: center;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    transform: translateY(50%);
+  }
+
+  &__detail {
+    display: flex;
+    align-items: center;
+    padding-inline-start: 2.1rem;
+
+    svg {
+      margin-inline-end: 0.8rem;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+
+    &--location,
+    &--rooms {
+      margin-block-start: 2.4rem;
+    }
+  }
+
+  .btn {
+    grid-column: 1 / -1;
+  }
 }
 
 .footer {
