--- a/nexter/src/sass/layout/_layout.scss
+++ b/nexter/src/sass/layout/_layout.scss
@@ -14,6 +14,15 @@
   background-color: $color-primary;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
+  display: flex;
+  justify-content: center;
+  padding-block-start: 1.2rem;
+
+  &__icon {
+    width: 3.2rem;
+    height: 3.2rem;
+    color: hsl(0, 0%, 100%);
+  }
 }
 
 .header {
